--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,20 @@
-name: Deploy to AWS S3
-
-on:
-  push:
-    branches:
-      - main
-
+name : my react app - app
+run-name : ${{ github.actor }}
+on : [push]
 jobs:
-  deploy:
+  push-to-s3:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 14
-
-    - name: Install Dependencies
-      run: npm install
-
-    - name: Build Portfolio
-      run: npm run build
-
-    - name: Deploy to AWS S3
-      run: |
-        aws s3 sync dist/ s3://aravind-portfolio-react
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Run npm
+        run: npm install
+      - name: Run npm build
+        run: npm run build
+      - name: Upload to s3
+        uses: jakejarvis/s3-sync-action@master
+        env:
+          SOURCE_DIR: build/
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
