--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,34 @@
-
-name: Build and Deploy to S3
+name: Build and Lint
 
 on:
   push:
     branches:
-      - main
+      - main  # adjust to your main branch name
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository code
-        uses: actions/checkout@v2
-     
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: npm install
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  # adjust to your Node.js version
 
-      - name: Disable ESLint warnings for unused variables
-        run: |
-          sed -i '1s;^;// eslint-disable-next-line;' src/components/Navbar.js
-          sed -i '4s;^;// eslint-disable-next-line;' src/components/Navbar.js
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build
-        run: npm run build
+    - name: Run linting
+      run: npm run lint  # adjust to your linting script if needed
 
-      - name: Upload to S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          SOURCE_DIR: build/
+    - name: Build
+      run: npm run build  # adjust to your build script
+
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: build
+        path: build  # adjust to the directory containing your build artifacts
