--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
 
     - name: Run linting
-      run: npm run lint  # adjust to your linting script if needed
+      run: npm run lint  # adjust to your linting script
 
     - name: Build
       run: npm run build  # adjust to your build script
